k8s/wikijs/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wikijs
  labels:
    name: wikijs
