k8s/wikijs/Wikijs-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: example
  namespace: wikijs
spec:
  rules:
    - host: wikijs.sinux.com
      http:
        paths:
          - backend:
              serviceName: wikijs
              servicePort: 80
            path: /
# This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
       - wikijs.sinux.com
      secretName: tls-secret
